Lab1/log/build_2026-03-15_23-15-42/followWall/stderr.log
  File "/home/dcs/Desktop/Lab/Lab1/install/followWall/lib/python3.8/site-packages/followWall/followWall.py", line 18
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax

